syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/streamdal/libs/protos/build/go/protos/steps";
option ruby_package = "Streamdal::Protos";

enum SchemaValidationType {
  SCHEMA_VALIDATION_TYPE_UNKNOWN = 0;
  SCHEMA_VALIDATION_TYPE_JSONSCHEMA = 1;
}

enum SchemaValidationCondition {
  SCHEMA_VALIDATION_CONDITION_UNKNOWN = 0;
  SCHEMA_VALIDATION_CONDITION_MATCH = 1;
  SCHEMA_VALIDATION_CONDITION_NOT_MATCH = 2;
}


enum JSONSchemaDraft {
  // protolint:disable ENUM_FIELD_NAMES_UPPER_SNAKE_CASE
  // protolint:disable ENUM_FIELD_NAMES_PREFIX
  JSONSCHEMA_DRAFT_UNKNOWN = 0;
  JSONSCHEMA_DRAFT_04 = 1;
  JSONSCHEMA_DRAFT_06 = 2;
  JSONSCHEMA_DRAFT_07 = 3;
}

message SchemaValidationStep {
  SchemaValidationType type = 1;

  SchemaValidationCondition condition = 2;

  oneof options {
    SchemaValidationJSONSchema json_schema = 101;
  }
}

message SchemaValidationJSONSchema {
  bytes json_schema = 1;

  JSONSchemaDraft draft = 2;
}